added a few styles styles and colors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
+    <color name="primary_color">#303030</color>
+    <color name="primary_color_light">#44ffbb33</color>
+    <color name="text_normal">#ffffff</color>
+    <color name="text_dark">#757575</color>
+    <color name="bg_dark">#c000</color>
+
 </resources>
