modified to use a brown color theme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,15 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-    <color name="primary_color">#303030</color>
-    <color name="primary_color_light">#ff888888</color>
-    <color name="text_normal">#ffffff</color>
-    <color name="text_dark">#ffc2c2c2</color>
-    <color name="bg_dark">#c000</color>
+    <color name="color_primary">#795548</color>
+    <color name="color_primary_dark">#8D6E63</color>
+    <color name="color_accent">#4E342E</color>
+
+    <color name="color_content_bg">#558B2F</color>
+    <color name="color_content_bg_light">#ff888888</color>
+    <color name="color_text_normal">#ffffff</color>
+    <color name="color_text_dark">#ffc2c2c2</color>
+    <color name="color_text_hyperlink">#e494aaff</color>
+    <color name="color_divider">#3000</color>
 
 </resources>
